crates/cli/tests/snapshots/run_node_test__runs_package_managers.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 51
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ node:npm
latest

Tasks: 1 completed
 Time: 100ms



