crates/cli/tests/snapshots/run_node_test__runs_script_task.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:viaScript
node platform
v18.0.0
▪▪▪▪ node:viaScript (100ms)

Tasks: 1 completed
 Time: 100ms
