crates/cli/tests/snapshots/run_node_test__runs_standard_script.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:standard
stdout
▪▪▪▪ node:standard (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



