crates/cli/tests/snapshots/run_node_test__sets_env_vars.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 204
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ node:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true
▪▪▪▪ node:envVars (100ms)

Tasks: 1 completed
 Time: 100ms



